--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -45,6 +45,23 @@
   }
 
   .arrow-buttons{display: none;}
-}
 
 /* story */
+
+/* footer  */
+
+  .footer {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .footer-column {
+    text-align: center;
+  }
+
+  .footer-social {
+    justify-content: center;
+  }
+}
+
+
