--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -48,6 +48,13 @@
 
 /* story */
 
+
+    .our-stories-cards-container {
+      grid-template-columns: repeat(2, 1fr);
+      gap: 15px;
+    }
+ 
+
 /* footer  */
 
   .footer {
