dispaly hide 1st card of story section

--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -47,7 +47,7 @@
   .arrow-buttons{display: none;}
 
 /* story */
-
+.our-stories-card-1{display: none;}
 
     .our-stories-cards-container {
       grid-template-columns: repeat(2, 1fr);
