fix challanging part

--- a/styles/Style.css
+++ b/styles/Style.css
@@ -587,8 +587,8 @@ a {
 }
 
 .footer-img {
-  background-color: white;
-  border-radius: 5px;
+  background-color: transparent;
+  
 }
 
 /* marquee  */
